@@ -88,7 +88,7 @@ public class ReverseAssFuck extends Fuck {
 
 		int otherm = m;
 		if (getSelf().has(Trait.insertion)) {
-			otherm += 10;
+			otherm += Math.min(getSelf().get(Attribute.Seduction) / 4, 40);
 		}
 		target.body.pleasure(getSelf(), getSelfOrgan(), getTargetOrgan(target), m, c);
 		getSelf().body.pleasure(target, getTargetOrgan(target), getSelfOrgan(), otherm, c);
